rust/test/dt/fundamental_data_type/dynamic/too_many_params.rs
use fundamental_data_type as TheModule;
use TheModule::prelude::*;

types!
{
  single Single : < T1, T2 >;
}

fn main()
{
}
